i'd say the tests work pretty well, this is just a checkpoint for gemini to not break stuff
